--- a/taller/servicio-items-dev.properties
+++ b/taller/servicio-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando entorno Desarrollo ...
-configuracion.autor.nombre=Edwin Maravi
-configuracion.autor.email=emaravi@cjavaperu.com
+configuracion.autor.nombre=Omer Cedeño
+configuracion.autor.email=cedeomer@gmail.com
